--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,8 @@
 <body>
     <nav>
         <ul>
-            <li><a href="/blog/index.html">Blog</a></li>
-            <li><a href="/forking/index.html">Forking</a></li>
+            <li><a href="{{ site.url }}/blog/">Blog</a></li>
+            <li><a href="{{ site.url }}/forking/">Forking</a></li>
         </ul>
     </nav>
     <div class="container">
