--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,14 +3,14 @@
 
 <head>
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/path/to/css.css">
 </head>
 
 <body>
     <nav>
         <ul>
-            <li><a href="/blog/">Blog</a></li>
-            <li><a href="/forking/">Forking</a></li>
+            <li><a href="{{ site.baseurl }}/blog/">Blog</a></li>
+            <li><a href="{{ site.baseurl }}/forking/">Forking</a></li>
         </ul>
     </nav>
     <div class="container">
