--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: default
 <p>
     Tags:
     {% for tag in page.tags %}
-        <a href="{{ post.url }}">#{{ tag }}</a>{% unless forloop.last %}, {% endunless %}
+        <a href="{{ site.baseurl }}{{ post.url }}">#{{ tag }}</a>{% unless forloop.last %}, {% endunless %}
     {% endfor %}
 </p>
 
