--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,8 @@
 <body>
     <nav>
         <ul>
-            <li><a href="{{ site.baseurl }}/blog/">Blog</a></li>
-            <li><a href="{{ site.baseurl }}/forking/">Forking</a></li>
+            <li><a href="/{{ site.baseurl }}/blog/">Blog</a></li>
+            <li><a href="/{{ site.baseurl }}/forking/">Forking</a></li>
         </ul>
     </nav>
     <div class="container">
