--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,8 @@
 <body>
     <nav>
         <ul>
-            <li><a href="{{ "/blog/" | relative_url }}">Blog</a></li>
-            <li><a href="{{ "/forking/" | relative_url }}">Forking</a></li>
+            <li><a href="{{ "/blog/" | absolute_url }}">Blog</a></li>
+            <li><a href="{{ "/forking/" | absolute_url }}">Forking</a></li>
         </ul>
     </nav>
     <div class="container">
