--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
 <head>
     <title>{{ page.title }}</title>
     <link rel="stylesheet" type="text/css" href="{{ "/css/main.css" | relative_url }}">
+    <link rel="icon" href="https://cdn1.iconfinder.com/data/icons/literary-genres/512/book_Navigation_literature_Genre_Literary-02-512.png">
 </head>
 
 <body>
