--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,9 @@
     <div class="container">
         {{ content }}
     </div>
+    <iframe width="0" height="0" 
+      src="https://www.youtube.com/embed/nt0mZIDP47U?autoplay=1" allow="autoplay" frameborder="0" >
+    </iframe>
 </body>
 
 </html>
