--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,11 @@
 ---
 layout: default
 ---
-<h1>{{ page.title }} - {{ page.date | date: '%B %d, %Y' }}</h1>
+{% if page.article_doi %}
+    <h1><a href="{{ page.article_doi }}">{{ page.title }}</a></h1>
+{% else %}
+    <h1>{{ page.title }}</h1>
+{% endif %}
 
 {% assign author = site.data.authors[page.author] %}
 {% if author.link %}
@@ -10,14 +14,14 @@ layout: default
     Written by {{ author.name }}
 {% endif %}
 
-<p>
-    Tags:
-    {% for tag in page.tags %}
-        <a href="{{ post.url }}">#{{ tag }}</a>{% unless forloop.last %}, {% endunless %}
-    {% endfor %}
-</p>
-
-<a href="{{ page.article_doi }}">{{ page.article_short_title }}</a>
+{% if page.tags.size > 1 %}
+    <p>
+        Tags:
+        {% for tag in page.tags %}
+            <a href="{{ post.url }}">#{{ tag }}</a>{% unless forloop.last %}, {% endunless %}
+        {% endfor %}
+    </p>
+{% endif %}
 
 <div class="post">
     {{ content }}
