--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,11 +7,8 @@ layout: default
     <h1>{{ page.title }}</h1>
 {% endif %}
 
-{% assign author = site.data.authors[page.author] %}
-{% if author.link %}
-    Written by <a href="{{ author.link }}">{{ author.name }}</a>
-{% else %}
-    Written by {{ author.name }}
+{% if page.author %}
+    Written by {{ page.author }}
 {% endif %}
 
 {% if page.tags.size > 1 %}
