--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@
     font-size: 1em;
     line-height: 1em;
     color: #ffffff;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
 code {
@@ -18,7 +19,7 @@ body {
 }
 
 /* hyperlinks */
-a { text-decoration: none; color: #0000ff; }
+a { text-decoration: none; color: #0000ff; text-shadow: -1px -1px 0 #999, 1px -1px 0 #999, -1px 1px 0 #999, 1px 1px 0 #999; }
 a:hover { text-decoration: underline; }
 
 /*p, ul { font-size: 1.5em; line-height: 1.4em; color: #333; }*/
