--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
 <body>
     <nav>
         <ul>
+            <li><a href="{{ "/" | relative_url }}">About</a></li>
             <li><a href="{{ "/how-to" | relative_url }}">How to</a></li>
             <li><a href="{{ "/blog" | relative_url }}">Blog</a></li>
         </ul>
